Form button improve and fix overflow

--- a/client/src/views/Form.jsx/Form.module.css
+++ b/client/src/views/Form.jsx/Form.module.css
@@ -117,10 +117,18 @@
 }
 
 .submitBtn {
-  background-color: #2df1f5;
+  background-color: #BE2ED7;
   padding: 1rem 2rem;
   margin: 1rem auto;
+  color: white;
   border-radius: 20px;
   font-size: 1.3rem;
   font-weight: 700;
+  transition: all 0.1s;
+}
+
+.submitBtn:hover{
+  transform: scale(1.05);
+  background-color: #4516b3;
+  border: 2px solid #6c2be4;
 }
