--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -6,4 +6,5 @@
   padding: 3rem;
   display: flex;
   flex-direction: column;
+  overflow: scroll;
 }
